# LearnMeson

./: .clang-format  README.md
myapp/: meson.build
myapp/src/: myapp.cpp
myapp/subprojects/simplelib/: meson.build
myapp/subprojects/simplelib/include/: simplelib.hpp
myapp/subprojects/simplelib/src/: simplelib.cpp
simpleapp/: meson.build
simpleapp/src/: simpleapp.cpp
simplelib/: meson.build
simplelib/include/: simplelib.hpp
simplelib/src/: simplelib.cpp
